# article-to-video

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.bat  test_web_performance.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  jobs.py  schemas.py
app/jobs/: __init__.py  store.py
app/pipeline/: __init__.py  models.py  orchestrator.py
app/pipeline/compose/: __init__.py  aspect.py  overlay.py  timeline.py
app/pipeline/media/: __init__.py  base.py  cache.py  pexels.py  pixabay.py  ranker.py  semantic.py  unsplash.py  web_recorder.py
app/pipeline/music/: __init__.py  base.py  jamendo.py  library.py  mood.py
app/pipeline/nlp/: __init__.py  base.py  deepseek.py  llm.py  local.py  ollama.py  qwen.py  spark.py  wenxin.py  zhipu.py
app/pipeline/render/: __init__.py  ffmpeg.py
app/pipeline/subtitle/: __init__.py  srt.py
app/pipeline/tts/: __init__.py  edge_tts.py  voices.py
app/static/: app.js  style.css
app/templates/: index.html
docs/: ARCHITECTURE.md
scripts/: __init__.py  run.py
tests/: conftest.py  test_api.py  test_compose.py  test_media.py  test_music.py  test_nlp.py  test_providers.py  test_smoke.py  test_subtitle.py  test_tts.py
tests/fixtures/: sample_en.txt  sample_zh.txt
